V0.24
* Truncate the pathname to save files to if it gets too long on windows (which
  has stupidly low limits) (#49)
* Added option to allow the user to specify that they don't want cover art to
  be downloaded. This is done by adding the line 'downloadCoverArt=false' to
  ~/.emusicj/emusicj.props (#38)
V0.23
* Allow multiple tracks to be selected (#42)
* Adds auto-remove timer to tracks that were finished when the program 
  started (#41)
* Trim spaces from ends of album/track/artist names as vfat doesn't like them
  (#40)
* Changed default save location of files to ~/Music or ~/My Music (whichever 
  exists), defaulting to the first one if neither do
* [Reggae Country] added customisation for reggaecountry.com
* Fixed an infinite loop if the album/artist/track names contain a path
  wildcard (e.g. %t). Thanks to Hugh Brackett for spotting this one.
V0.22
* Added quotes around $@ in launch script to make it work better with some
  temp file names
* Changed default cover art name for windows and mac to 'folder.jpg'
* Cover art filename can be overridden by coverArtFilename option in
  prefs file
* Current download list saves when files are added, this means that the computer
  crashing won't lose the current progress (#35)
* Added " and & to the stripped out characters, they may be causing issues
  on some file systems (#29 maybe)
V0.21
* Added patch by Michael MacDonald to give it support for eMusic's new .emx
  file format
V1.0 (Naxos only)
* [Naxos] Version bump of the Classicsonline version
V0.20-svn
* [Naxos] Added the macsrc directory which contains seperate code to support
  OpenDoc events on Mac OS X.
* [Naxos] Allowed 'save files as:' part of preferences to not be shown by 
  program varients.
* [Naxos] Fixed bug where program will crash if the 'save files as' field
  is too short.
* [Naxos] The XML download state root node name now comes from the strings
  factory.
* [Naxos] Built a windows builder/installer